--- a/ptwoseatval.yaml
+++ b/ptwoseatval.yaml
@@ -1,42 +1,1 @@
-5-deployment-config ›
-1 p2-sit-values.yaml
-pplication:
-#nexus repository url
-repository: nexus-aws-prod.corp.internal.citizensbank.com:7991/repository/docker-ocp-p-2/ deployment:
-#number of replica for all services. can be specified at the service level replicaCount: 1
-progressDeadlineSeconds: 600
-*number of revisions to maintain after upgrades revisionHistoryLimit: 0
-#always true as paas runs sidecar sidecarInject: "true"
-#rolling update policy for pods rollingUpdate:
-enabled: true maxSurge: 25% maxUnavailable: 25%
-#image pull policy from nexus image:
-pullPolicy: Always
-# cluster ip type - common for all services
-service:
-type: ClusterIP
-#Optional #configMaps:
-#configmap-1: values/p2/configmap-1.yam1
-# List of services
-services:
-# Service name
-api-customer-details-query:
-deployment:
-# Enabling deployment creation for this service
-enabled: true
-# Optional - default is service name
-#overrideName: «<override-name>> image:
-# Name of docker image uploaded in nexus
-name: api-customer-details-query
-# Tag of docker image
-tag: 0.0.4-SNAPSHOT-57d1b913-ce63-4c3f-a83-3cc14842b00
-# Port to be exposed for external connectivity
-ports:
-name: http port: 8080
-I
-protocol: TCP containerPort: 8080
-# recommended to use same as service name for at lease one label
-selectorLabels:
-# list of labels are allowed - Match with service selector block
-citizens.paas/service: api-customer-details-query
-# Optional
-#reuseServiceAccount: «‹service-account-name>>
+Test
